--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
   </tr>
 </table>
 
+<h2>Audio That I Enjoy</h2>
+<audio controls>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+<h2>Favorite Video Clip</h2>
+<video width="320" height="240" controls>
+  <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
 <h2>Contact Me</h2>
 <form>
   <label for="name">Your Name:</label><br>
@@ -61,4 +73,4 @@
 </form>
 
 </body>
-</html>
+</html> 
